--- a/estudos/game-teste/index.html
+++ b/estudos/game-teste/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labirinto 1.0</title>
 </head>
-<body>
-    <div style="width: 640px; margin: 0 auto; padding-top: 10px;">
-        <canvas width="640" height="640" style="border: solid 1px;"></canvas>
+<body style="display: flex; justify-content: center; align-items: center;">
+    <div style="width: 640px; display: flex; justify-content: center; align-items: center; padding-top: 10px;">
+        <canvas width="1260" height="650" style="border: solid 1px;"></canvas>
     </div>
     <script src="js/script.js"></script>
 
